[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metabomatch"
version = "0.2.0"
description = "Match Thermo Compound Discoverer / generic metabolomics tables against HMDB for multi-omics network integration."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Arun" }
]
dependencies = [
    "openpyxl>=3.0",
    "rapidfuzz>=3.0",
    "lxml>=4.6",
    "tqdm>=4.60",
    "pandas>=1.3",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=2.2",
    "torch>=1.10",
]
xls = [
    "xlrd>=2.0",
]

[project.scripts]
metabomatch = "metabomatch.cli:main"

[tool.setuptools.packages.find]
include = ["metabomatch*"]
